# numerical-methods

./: LICENSE  README.md  SpaceInvaderCode.cpp
CPP_Spring2025_CS3010/KellyLwinProgrammingProject2/: Helper.cpp  Helper.h  LargeLinearSystem.cpp  LargeLinearSystem.h  LinearEquation.cpp  LinearEquation.h  LinearEquationsSolver.cpp  LinearEquationsSolver.h  linearEquations.txt  main.cpp
CPP_Spring2025_CS3010/KellyLwinProgrammingProject3/: BracketingMethod.cpp  BracketingMethod.h  Helper.cpp  Helper.h  NewtonRaphsonMethod.cpp  (+4 more)
CPP_Spring2025_CS3010/KellyLwinProgrammingProject3(2)/: BracketingMethod.cpp  BracketingMethod.h  CMakeLists.txt  Helper.cpp  Helper.h  NewtonRaphsonMethod.cpp  NewtonRaphsonMethod.h  SecantMethod.cpp  SecantMethod.h  main.cpp
CPP_Spring2025_CS3010/KellyLwinProgrammingProject3(2)/Data/: bisection_errors_f2.csv  falseposition_errors_f2.csv
CPP_Spring2025_CS3010/KellyLwin_CS3010_ProgrammingProject1_EC/: CMakeLists.txt  GaussianElimination.cpp  GaussianElimination.h  LinearEquation.h  TestLargeSystem.cpp  TestLargeSystem.h  main.cpp
KellyLwinProgrammingProject2/: CMakeLists.txt  Helper.cpp  Helper.h  LargeLinearSystem.cpp  LargeLinearSystem.h  LinearEquation.cpp  LinearEquation.h  LinearEquationsSolver.cpp  LinearEquationsSolver.h  linearEquations.txt
KellyLwin_CS3010_ProgrammingProject1/: CMakeLists.txt  Helper.cpp  Helper.h  LinearEquation.cpp
KellyLwin_CS3010_ProgrammingProject1_EC/: CMakeLists.txt  GaussianElimination.cpp  GaussianElimination.h  LinearEquation.h  TestLargeSystem.cpp  TestLargeSystem.h  linear_equations.txt  main.cpp
(+16 files in other folders)
